--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Terrafom Plan
         run: terraform plan
 
-    if: github.ref == 'refs/heads/master'
-    steps: 
-      - name: Terrafom Apply
-        run: terraform apply
+    # if: github.ref == 'refs/heads/master'
+    # steps: 
+    #   - name: Terrafom Apply
+    #     run: terraform apply
